fpp_parser/src/tests/parse-error.ref.txt
error: syntax error
 --> [ local path prefix ]/parse-error.fpp:5:1
  |
5 | + c
  | ^ module member expected
  |
  = note: expected one of [Keyword(Type), Keyword(Array), Keyword(Constant), Keyword(Enum), Keyword(Struct), Keyword(Component), Keyword(Active), Keyword(Passive), Keyword(Queued), Keyword(Interface), Keyword(Module), Keyword(Port), Keyword(State), Keyword(Topology), Keyword(Include), Keyword(Locate)]
  = note: got Plus

error: syntax error
 --> [ local path prefix ]/parse-error.fpp:7:1
  |
7 | + c
  | ^ module member expected
  |
  = note: expected one of [Keyword(Type), Keyword(Array), Keyword(Constant), Keyword(Enum), Keyword(Struct), Keyword(Component), Keyword(Active), Keyword(Passive), Keyword(Queued), Keyword(Interface), Keyword(Module), Keyword(Port), Keyword(State), Keyword(Topology), Keyword(Include), Keyword(Locate)]
  = note: got Plus

